Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,19 @@
 .videocall-wrapper{
     width: 100%;
     height: 100vh;
-
-    /* DEBUG */
-    background-color: aqua;
 }
 
 img{
-    max-width: 100%;
+    width: 100%;
+    max-width: 250px;
+    max-height: 150px;
     display: block;
 }
 
 
 /* ICONE TOOLBAR */
 .icona{
-    padding: 0 1em;
+    margin: 0 1em;
     text-align: center;
 }
 .icon{
@@ -38,7 +37,6 @@ img{
     font-size: .5em;
 }
 
-
 /* MAIN */
 
 /* Content video call */
@@ -47,12 +45,12 @@ img{
     height: calc(100% - 150px);
     position: relative;
     background-color: #000000;
+    overflow: auto;
 }
 
 /* Griglia videocam */
 .row{
     width: 90%;
-    height: calc(100% - 100px);
     display: flex;
     flex-wrap: wrap;
     position: absolute;
@@ -60,19 +58,12 @@ img{
     left: 50%;
     transform: translateX(-50%);
 
-    overflow: auto;
 }
 
 .col{
     width: calc(100% / 7 - 1em);
-
-    margin: 1em .5em;
+    margin: .5em;
     position: relative;
-}
-
-.videocam{
-    width: 100%;
-    height: 100%;
 }
 
 .tag-info{
